--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
           <button
             type="button"
             class="btn btn-primary"
+            data-bs-dismiss="modal"
             onclick="saveChanges()"
+
           >
             Save changes
           </button>
