--- a/index.html
+++ b/index.html
@@ -38,22 +38,7 @@
 <link href="style.css" rel="stylesheet"/>
 <title>Tasky</title>
 </head>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<body>
+<body onload="loadinitialTaskCards()">
 
 
     <div
@@ -125,7 +110,7 @@
           <button
             type="button"
             class="btn btn-primary"
-            data-bs-dismiss="modal"
+             data-bs-dismiss="modal"
             onclick="saveChanges()"
 
           >
